Progress on Model package